--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
- header{ 
+header {
         background-color: rgb(12, 117, 117);
-        color: antiquewhite;
-{ 
+        color: antiquewhite;   
+}
+
+.cabecalho-imagem{
+        width: 20%;
+}
+
+.cabecalho-lista-item{
+        display: inline-block;
+        margin: 0% 16px;
+        font-size: 16px;
+}
