--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+        margin: 0;
+        padding: 0;
+}
+    
 header {
         background-color: rgb(12, 117, 117);
         color: antiquewhite;   
@@ -11,13 +16,15 @@ header {
         align-items: center;
         padding: 24px 0;
 }
-    
-.cabecalho-imagem{
-        width: 20%;
+
+.cabecalho-lista-item{
+        display: inline-block;
 }
 
 .cabecalho-lista-item{
         display: inline-block;
-        margin: 0% 16px;
-        font-size: 16px;
+        margin: 0 16px;
+        font-size: 24px;
 }
+    
+    
