--- a/style.css
+++ b/style.css
@@ -1,30 +1,11 @@
-*{
-        margin: 0;
-        padding: 0;
-}
-    
 header {
-        background-color: rgb(12, 117, 117);
-        color: antiquewhite;   
+        background-color: blueviolet;
+        color: ghostwhite;
 }
 
-.cabecalho {
-        background-color: #424E61;
-        color: white;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        padding: 24px 0;
-}
+.cabecalho.imagem {
+        width: 20%;
 
-.cabecalho-lista-item{
-        display: inline-block;
-}
-
-.cabecalho-lista-item{
-        display: inline-block;
-        margin: 0 16px;
-        font-size: 24px;
 }
     
     
