--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header {
-        background-color: blueviolet;
+        background-color: rgb(199, 151, 243);
         color: ghostwhite;
         display: flex;
         justify-content: space-around;
