--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+        margin: 0;
+        padding: 0;
+}
 header {
         background-color: rgb(241, 239, 243);
         color: rgb(134, 134, 136);
