--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ header {
  .escola-imagem{
         width: 25%;
     }
+.escola{
+        background-image: linear-gradient();
+    }
+    
     
     
     
