--- a/style.css
+++ b/style.css
@@ -1,32 +1,26 @@
 *{
         margin: 0;
         padding: 0;
-}
-header {
-        background-color: rgb(255, 255, 255);
-        color: rgb(158, 158, 161);
+    }
+    
+    .cabecalho {
+        background-color: #424E61;
+        color: white;
         display: flex;
         justify-content: space-around;
         align-items: center;
         padding: 24px 0;
-}
-
-.cabecalho.imagem {
-        width: 10%;
-
-}
- .cabecalho-lista-item{
-        display: inline-block;
-        margin:0 16px;
-        font-size: 24px;
- }
- .escola-imagem{
-        width: 25%;
-    }
-.escola{
-        background-image: linear-gradient();
     }
     
+    .cabecalho-imagem{
+        width: 20%;
+    }
+    
+    .cabecalho-lista-item{
+        display: inline-block;
+        margin: 0 16px;
+        font-size: 24px;
+    }
     
     
     
