--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
         margin: 0;
         padding: 0;
     }
-    
+
     body{
         font-family: "Poppins", sans-serif;
     }
@@ -44,5 +44,9 @@
     }
     .escola-titulo{
         padding: 24px 0;
+    }
+     
+    .estudante-imagem{
+        width: 120px;
     }
     
